--- a/manifest.json
+++ b/manifest.json
@@ -12,11 +12,18 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["content_script.js"]
+        "js": ["content_script.js"],
+        "run_at": "document_idle"
       }
     ],
     "action": {
       "default_popup": "popup.html",
-      "default_icon": "icon.png"
+      "default_icon": "obrez.png"
+    },
+    "icons": {
+        "16":"mozg16.png",
+        "32":"mozg32.png",
+        "48":"mozg48.png",
+        "128":"mozg128.png"
     }
   }
